# tg-price-bot

./: Dockerfile.juno  README.md  docker-compose.yml  pyproject.toml
juno/: bot.py  command_price.py  data.py
